created python package to serve schemas

--- a/gdc-api/Dockerfile
+++ b/gdc-api/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /usr/src/setup
 ADD dev-requirements.txt   /usr/src/setup/
 
 RUN apt-get update
+
 RUN apt-get install -y autoconf automake libtool curl make g++ unzip vim
 
 
@@ -17,6 +18,14 @@ RUN mkdir $HOME/.python-eggs \
   && pip install ipython \
   && pip install pdb \
   && pip install nose
+
+# for now,  install cccschemas from git
+RUN git clone https://github.com/ohsu-computational-biology/gdc-experimental \
+  && cd gdc-experimental \
+  && git checkout api2 \
+  && cd schemas \
+  && pip install ./
+
 
 # mounted volume for source
 RUN mkdir -p /service
