--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -30,7 +30,7 @@
   "bugs": {
     "url": "https://github.com/ohsu-computational-biology/gdc-experimental/issues"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://192.168.99.100:8000",
   "devDependencies": {
     "react-scripts": "0.7.0"
   },
